@@ -432,6 +432,8 @@ int ACE_TMAIN (int argc, ACE_TCHAR **argv)
           if (!admin.shutdown ())
             retval = -1;
         }
+
+      orb->destroy ();
     }
   catch (CORBA::Exception &ex)
     {
