@@ -3,7 +3,8 @@
 
 project : componentidldefaults {
  idlflags += -Gcn -Gxhcn -I$(CIAO_ROOT)/connectors
-   
+ idlflags -= -Gxhex
+
   Modify_Custom (IDL) {
     optional(source_pre_extension) {
       commandflags(-Gcn) += _conn
